--- a/src/style.css
+++ b/src/style.css
@@ -14,10 +14,13 @@ body {
 }
 
 /* Main Layout */
-.container {
+/* .container {
     max-width: 1500px;
     margin: 0 auto;
-
+}*/
+#root {
+    max-width: 1500px;
+    margin: 0 auto;
 }
 .header {
     margin-bottom: 40px;
