S6-62-end; Creating a Loader Component

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,13 @@ body {
 .hidden {
     display: none !important;
 }
+.message {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 32px;
+    font-weight: 600;
+    
+}
 
 /* Main Layout */
 /* .container {
