--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #292524;
     color: #fafaf9;
     font-family: "Sono", sans-serif;
-    padding: 40px 64px;
+    padding: 40px 64px 0px;
 }
 .hidden {
     display: none !important;
@@ -16,8 +16,12 @@ body {
     text-align: center;
     text-transform: uppercase;
     font-size: 32px;
+    font-weight: 600;  
+}
+.disputed {
+    color: #ef4444;
     font-weight: 600;
-    
+    margin-right: 24px;
 }
 
 /* Main Layout */
@@ -45,6 +49,10 @@ body {
     width: 68px;
     height: 68px;
 }
+section {
+    overflow: scroll;
+    padding-bottom: 40px;
+}
 .fact-form{
     background-color: #44403c;
     margin-bottom: 40px;
@@ -56,7 +64,7 @@ body {
 }
 @media(max-width: 1000px) {
     body {
-        padding: 32px 48px;
+        /* padding: 32px 48px; */
     }
     .fact-form {
         flex-direction: column;
@@ -72,6 +80,10 @@ body {
     display: grid;
     grid-template-columns: 250px 1fr;
     gap: 48px;
+    /* background-color: #ef4444; */
+
+    height: calc(100vh - 48px - 68px - 40px - 12px);
+
 }
 @media(max-width: 900px) {
     .main {
